--- a/ProjetoIntMobile/backend/package.json
+++ b/ProjetoIntMobile/backend/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "express-async-errors": "^3.1.1",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "toastify-react-native": "^5.0.0"
   }
 }
