--- a/App mobile/asyncstoragecliente/package.json
+++ b/App mobile/asyncstoragecliente/package.json
@@ -18,6 +18,7 @@
     "firebase": "^8.8.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-picker-select": "^9.1.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0"
   },
