--- a/App mobile/asyncstoragecliente/package.json
+++ b/App mobile/asyncstoragecliente/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-picker/picker": "^2.7.2",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.7",
-    "expo": "~50.0.4",
+    "expo": "^50.0.14",
     "expo-status-bar": "~1.11.1",
     "firebase": "^8.8.1",
     "react": "18.2.0",
