--- a/ProjetoIntMobile/frontend/package.json
+++ b/ProjetoIntMobile/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/datetimepicker": "^7.6.4",
     "@react-native-picker/picker": "^2.7.2",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
